[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "dependency-dash"
version = "0.1.0b1"
description = "A fully Open Source dependency dashboard."
readme = "README.rst"
keywords = [ "dashboard", "dependency", "github", "requirement",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/repo-helper/dependency-dash"
"Issue Tracker" = "https://github.com/repo-helper/dependency-dash/issues"
"Source Code" = "https://github.com/repo-helper/dependency-dash"

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Linux", "macOS",]
license-key = "MIT"
package = "dependency_dash"
additional-files = [
    "recursive-include dependency_dash/static/css *.css",
    "recursive-include dependency_dash/static/css *.css.map",
    "recursive-include dependency_dash/static/js *.js",
    "recursive-include dependency_dash/static/webfonts *.woff",
    "recursive-include dependency_dash/static/webfonts *.woff2",
    "recursive-include dependency_dash/static/webfonts *.eot",
    "recursive-include dependency_dash/static/webfonts *.ttf",
    "recursive-include dependency_dash/static *.jpg",
    "recursive-include dependency_dash/static *.webp",
    "recursive-include dependency_dash/static *.avif",
    "recursive-include dependency_dash/static *.svg",
    "recursive-include dependency_dash/static *.png",
    "recursive-include dependency_dash/templates *.html",
    "recursive-include dependency_dash/pages *.md",
]

[tool.importcheck]
always = [ "dependency_dash", "dependency_dash.github", "dependency_dash.pypi", "dependency_dash.routes",]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
incremental = false

[tool.dep_checker]
allowed_unused = [ "gunicorn", "pygments", "setuptools",]

[tool.dep_checker.name_mapping]
github3-py = "github3"

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10
